<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="48dp">

    <TextView
        android:id="@+id/tv_interest_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculation_title"
        android:textSize="34dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:textColorHint="@color/gray_light"
        android:textColor="@color/white"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/et_interest_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/interest_rate_hint"
        android:textColorHint="@color/gray_light"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="48dp"/>

    <TextView
        android:id="@+id/tv_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="0" />

    <SeekBar
        android:id="@+id/seekBar_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/orange"
        android:thumbTint="@color/orange"
        android:progressBackgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tv_selectedDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/days_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/calculate_button"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:backgroundTint="@color/orange"
            android:text="@string/clear_button"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/btn_print"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="@string/print_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_total_payment"
        android:layout_marginTop="48dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_payment_result" />
</LinearLayout>
